# breadwallet-android

./: .gitignore  .gitlab-ci.yml  .gitmodules  .project  .travis.yml  CHANGELOG.MD  FakeSigningKey  README.md  Release_checklist  build.gradle  build.gradle.kts  checkstyle.xml  crash.txt  elastos.jks.enc  elastostest.jks  gradle.properties  import-summary.txt  inputRecoveryText.sh  jacoco.gradle  publishTODO.txt  settings.gradle  settings.gradle.kts  trusted_roots_ICS.txt  unlockdevice.sh
app/: .gitignore  BRBCashParams.h  CMakeLists.txt  Todos  build.gradle  build.gradle.kts  detekt-baseline.xml  fabric.properties  google-services.json  lint.xml  proguard-rules.pro  secret.properties
app/brd/release/: output.json
app/ela/release/: output.json
app/elaUpgradeTest/release/: output.json
app/gradle/wrapper/: gradle-wrapper.properties
app/src/brd/: google-services.json
app/src/brd/debug/: google-services.json
app/src/brdTestnet/: google-services.json
app/src/brdTestnet/debug/: google-services.json
app/src/debug/assets/: native-api-explorer.html
app/src/debug/brd/: google-services(o).json  google-services.json
app/src/debug/brdTestnet/: google-services.json
app/src/debug/java/: DebugAppHooks.kt
app/src/debug/res/raw/: brd_web_3_staging.tar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Todos
app/src/main/assets/bundle/: bundle.js  index.html  main.css  vendor.js
app/src/main/assets/vote/: index.html  request_vote.html  vote_request.html
app/src/main/assets/words/: it-BIP39Words.txt
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/breadwallet-core/: BRAddress.c  BRAddress.h  BRArray.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP38Key.c  BRBase58.c  BRBloomFilter.h  BRChainParams.h  BRCrypto.c  BRCrypto.h  BRInt.h  BRKey.c  BRKey.h  BRKeyECIES.c  BRKeyECIES.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRSet.c  BRSet.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  LICENSE  README.md  module.modulemap  test.c
app/src/main/jni/transition/: JNIBIP32Sequence.c  JNIBIP32Sequence.h  JNIBase58.c  JNIBase58.h  JNIKey.c  JNIKey.h  PeerManager.c  PeerManager.h  PeerManagerCallbacks.c  PeerManagerCallbacks.h  WalletCallbacks.c  WalletCallbacks.h  core.c  core.h  testingStuff.c  wallet.c  wallet.h
app/src/main/proto/: Messages.proto  paymentrequest.proto
app/src/main/res/anim/: accelerate_deceleration_interpolator.xml  anim_upload_progress.xml  anticipate_interpolator.xml  bounce_interpolator.xml  check_animation.xml  decelerate_interpolator.xml  empty_300.xml  enter_from_bottom.xml  enter_from_left.xml  enter_from_right.xml  enter_from_top.xml  exit_to_bottom.xml  exit_to_left.xml  exit_to_right.xml  exit_to_top.xml  fade_down.xml  fade_in.xml  fade_out.xml  fade_up.xml  flipper_enter.xml  flipper_exit.xml  from_middle.xml  overshoot_interpolator.xml  scale_down.xml  scale_up.xml  shake.xml  to_middle.xml
app/src/main/res/animator/: fragment_in.xml  fragment_out.xml  from_bottom.xml  from_left.xml  from_right.xml  from_top.xml  plain_300.xml  to_bottom.xml  to_left.xml  to_right.xml  to_top.xml
app/src/main/res/color/: blue_button_text.xml  bottom_nav_icon_tint_selector.xml  fee_selector_text_selector.xml  fiat_option_text_selector.xml  home_nav_selector.xml  transfer_fiat_option_text_selector.xml
app/src/main/res/drawable/: add_wallet_button.xml  add_wallet_button_dark.xml  add_wallets_searchbar.xml  admin_card_shape.xml  animated_check.xml  arrow_down_bold_circle.xml  arrow_leave.xml  arrow_up_bold_circle.xml  asset_icon_background_transparent.xml  auth_item_bg.xml  auth_sheet_shape.xml  author_check_selector.xml  b_blue.xml  b_blue_pressed.xml  b_blue_square.xml  b_blue_stroke_pressed.xml  b_gray_stroke.xml  b_gray_stroke_pressed.xml  b_half_left_blue.xml  b_half_left_blue_stroke.xml  b_half_right_blue.xml  b_half_right_blue_stroke.xml  b_half_right_white.xml  bch_dialog_gradient.xml  border_shape.xml  border_shape_pressed.xml  brd_logo_gradient.xml  brd_logo_white_svg.xml  bread_toggle_on.xml  btc_card_shape.xml  button_create_wallet.xml  button_half_left.xml  button_half_right.xml  button_primary_blue.xml  button_recover_wallet.xml  button_reset_pin.xml  button_secondary_blue_stroke.xml  button_secondary_gray_stroke.xml  buy_partner_shape.xml  chevron_right_light.xml  (+183 more)
app/src/main/res/drawable-anydpi-v21/: ic_check_mark_blue.xml  ic_check_mark_white.xml  ic_delete_black.xml  ic_delete_dark.xml  ic_delete_white.xml  ic_paper_phrase.xml  ic_pen.xml  ic_pin_dot_black.xml  ic_pin_dot_empty.xml  ic_pin_dot_empty_white.xml  ic_pin_dot_end.xml  ic_pin_dot_filled.xml  ic_pin_dot_filled_alt.xml  ic_pin_dot_filled_white.xml  ic_pin_dot_gray.xml  ic_pin_dot_start.xml  ic_pin_dot_white.xml
app/src/main/res/drawable-hdpi/: button.xml  button_white.xml  clickable_layout.xml  ic_white_wallet.xml  toast_layout_black.xml  toast_layout_blue.xml  toast_layout_orange.xml  toastlayout.xml
app/src/main/res/drawable-xxhdpi/: button_regular_blue.xml
app/src/main/res/font/: circular_pro.xml  font_family.xml
app/src/main/res/layout-sw600dp/: activity_decoder.xml  activity_intro.xml  activity_intro_show_phrase.xml  activity_main.xml  activity_request_qr.xml  activity_test.xml  cloud_dialog.xml  currency_list_item.xml  fragment_about.xml  fragment_change_password_dialog.xml  fragment_currency.xml  fragment_decoder.xml  fragment_fingerprint_limit.xml  fragment_main.xml  fragment_password_dialog.xml  fragment_qr_main.xml  fragment_recovery_phrase.xml  fragment_scan_result.xml  fragment_settings.xml  fragment_settings_all.xml  fragment_sharing_dialog.xml  fragment_wipe_wallet.xml  intro_fragment_new_recover.xml  intro_fragment_new_wallet.xml  intro_fragment_recover_wallet.xml  toast.xml  (+9 more)
app/src/release/brd/: google-services.json
app/src/release/brdTestnet/: google-services.json
app/src/release/java/: ReleaseAppHooks.kt
app/src/test/java/: FlowUtilsTest.kt  PaperKeyTests.java  PlatformTests.java  RedactedTest.kt
app/src/test/resources/: en-BIP39Words.txt
(+2464 files in other folders)
